tests/cases/errors/parse/unterminated_string.hc
//@ error: unterminated string literal
U0 Main()
{
  "abc;
}
